[tool.poetry]
name = "realib"
version = "0.1.0"
description = ""
authors = ["swjupudi <swarna.s92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
plotly = "^5.11.0"
dash = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
